tests/baselines/reference/unusedSingleParameterInFunctionDeclaration.errors.txt
tests/cases/compiler/unusedSingleParameterInFunctionDeclaration.ts(2,18): error TS6133: 'person' is declared but never used.
tests/cases/compiler/unusedSingleParameterInFunctionDeclaration.ts(3,9): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedSingleParameterInFunctionDeclaration.ts (2 errors) ====
    
    function greeter(person: string) {
                     ~~~~~~
!!! error TS6133: 'person' is declared but never used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
    }